1.4.0i2:
    Checks & Agents:
    * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running

    WATO:
    * 3914 FIX: Roles: Aliases are now unique during cloning


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...
    * 3114 linux and windows agent can now be configured to directly encrypt their output. For real-time updates encryption is now optional (but active per default)...
    * 3531 Reduced Check_MK helper size for certain dists/python versions...
    * 3580 The macro $HOSTNAME$ is now available for host checks which are based on service states
    * 3155 implemented dual monitoring for systems with management boards (like HP iLO)
    * 3721 Host macros are now replaced in datasource program command lines...
    * 3853 cmk --list-tag can now also list offline hosts
    * 3806 Sped up "Activate changes"...
    * 3193 FIX: Fixed fake check results for hosts...
    * 3214 FIX: Removing SNMP checks for non SNMP hosts and agent based checks for non agent hosts...
    * 3220 FIX: Check_MK HW/SW Inventory is now always disabled for "No Agent" hosts
    * 3221 FIX: Fixed broken nagios config because of missing contact group check-mk-notify with rule based notifications enabled...
    * 3234 FIX: Make unixcat more robust...
    * 3275 FIX: Piggyback based services were skipped on "No agent hosts"...
    * 3286 FIX: Fixing possible logging issues when using datasource programs for monitoring...
    * 3008 FIX: Fixed exception in logwatch config generation when using Nagios...
    * 3105 FIX: fixed crash in cmk --dump for services containing non-ascii characters
    * 3343 FIX: MKP: Verifying minimal version of packages during installation...
    * 3349 FIX: Added rule to disable Inline-SNMP per host...
    * 3123 FIX: fix for temperature services discovered pre-1.2.8 that caused errors on writing configuration
    * 3385 FIX: Fixed not updated discovery service after grouped auto discovery...