@@ -1,0 +1,9 @@
+Title: User access times: New icon when never logged in; New column "last seen"
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i2
+Date: 1475226861
+Class: feature
+
+
